fix: Select doesn't fill up button on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,8 @@ body, .app {
   height: 100%;
   opacity: 0;
   cursor: pointer;
+  -webkit-appearance: none;
+  border-radius: 50%;
 }
 
 /* book cover */
